--- a/app/src/main/res/layout/activity_change.xml
+++ b/app/src/main/res/layout/activity_change.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddActivity">
+    tools:context=".ChangeActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/title_edit_text"
+        android:id="@+id/change_title_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="タイトル"
         android:layout_margin="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/sentence_edit_text"
+        app:layout_constraintBottom_toTopOf="@id/change_sentence_edit_text"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -24,12 +24,12 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/sentence_edit_text"
+        android:id="@+id/change_sentence_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="本文"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/title_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/change_title_edit_text"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -40,7 +40,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/check_button"
+        android:id="@+id/change_check_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
